# finance

./: README.md  TODO.md  meson.build  org.gnome.finance.json
data/: meson.build  org.gnome.Finance.appdata.xml.in  org.gnome.Finance.desktop.in  org.gnome.Finance.gschema.xml  org.gnome.finance.appdata.xml.in  org.gnome.finance.desktop.in  org.gnome.finance.gschema.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: finance-enum-types.c.template  finance-enum-types.h.template  finance-enums.h  finance-preferences-window.c  finance-types.h  finance.gresource.xml  main.c  meson.build
src/core/: meson.build
src/core/controllers/: finance-controller-transactions.c  finance-controller-transactions.h  finance-transaction-view-controller.c  finance-transaction-view-controller.h  meson.build
src/core/entities/: finance-transaction-entity.h
src/core/objects/: finance-object-transaction.c
src/gdo/: finance-graphic-data-object.c  finance-graphic-data-object.h
src/gdo/data/: finance-transaction-data.h
src/gui/: finance-application.c  finance-application.h  finance-entry-amount.c  finance-entry-amount.h  finance-entry-amount.ui  finance-entry-date.c  finance-entry-date.h  finance-entry-date.ui  finance-entry-monetary.c  finance-entry-monetary.h  finance-entry-monetary.ui  finance-pref-box.ui  finance-pref-row-check.c  finance-pref-row-check.h  finance-pref-row-check.ui  finance-pref-row-spin.c  finance-pref-row-spin.h  finance-pref-row-spin.ui  finance-pref-row-switch.c  finance-pref-row-switch.h  finance-pref-row-switch.ui  finance-pref-row.c  finance-pref-row.h  finance-pref-window.h  finance-pref-window.ui  finance-preferences-window.c  finance-preferences-window.h  finance-preferences-window.ui  finance-shortcuts-window.c  finance-shortcuts-window.h  finance-shortcuts-window.ui  finance-transaction.c  finance-transaction.h  finance-window.c  finance-window.h  finance-window.ui  gui.gresource.xml  meson.build
src/gui/editor/: editor.gresource.xml  finance-transaction-editor.c  finance-transaction-editor.h  finance-transaction-editor.ui  meson.build
src/gui/editor/entries/: entries.gresource.xml  finance-date-entry.c  finance-date-entry.h  finance-date-entry.ui  finance-entry-date.c  finance-entry-date.h  finance-entry-monetary.c  finance-entry-monetary.ui  finance-monetary-entry.c  finance-monetary-entry.h  finance-monetary-entry.ui  meson.build
src/gui/pane/: finance-pane-row.c  finance-pane-row.h  finance-pane-row.ui  finance-pane.c  finance-pane.h  finance-pane.ui  meson.build  pane.gresource.xml
src/gui/panel/: finance-left-panel.c  finance-left-panel.h  finance-left-panel.ui  meson.build  panel.gresource.xml
src/gui/panel/rows/: finance-transaction-row.c  finance-transaction-row.h  finance-transaction-row.ui  meson.build  rows.gresource.xml
src/gui/transaction/: finance-entry-date.c  finance-entry-date.h  finance-entry-monetary.c  finance-transaction.c  finance-transaction.h  finance-transaction.ui  meson.build  transaction.gresource.xml
src/gui/transaction/entries/: entries.gresource.xml  finance-entry-date.c  finance-entry-monetary.c  finance-entry-monetary.h  meson.build
src/gui/views/: finance-transaction-view.c  finance-transaction-view.h  finance-transaction-view.ui  finance-transactions-view.c  finance-transactions-view.h  finance-transactions-view.ui  finance-view-child.c  finance-view-child.h  finance-view-child.ui  finance-view-transactions.c  finance-view-transactions.h  finance-view-transactions.ui  finance-view.c  finance-view.h  meson.build  views.gresource.xml
src/gui/views/children/: children.gresource.xml  finance-child-summary.c  finance-child-summary.h  finance-child-summary.ui  finance-summary-child.c  finance-summary-child.h  finance-summary-child.ui  meson.build
src/gui/views/transactions/: finance-transactions-summary.c  finance-transactions-summary.h  finance-transactions-summary.ui  finance-transactions-view.c  finance-transactions-view.h  finance-transactions-view.ui  meson.build  transactions.gresource.xml
src/pref/: finance-pref-box.c  finance-pref-box.h  finance-pref-list-box.c  finance-pref-list-box.h  finance-pref-row-check.c  finance-pref-row-check.ui  finance-pref-row-spin.c  finance-pref-row-switch.c  finance-pref-row.c  finance-pref-row.h  finance-pref-window.c  meson.build  pref.gresource.xml
src/theme/: meson.build  style.css  theme-gresources.xml
src/utils/: finance-utils.c  finance-utils.h  meson.build
