sources += files(
  'finance-pref-box.c',
  'finance-pref-list-box.c',
  'finance-pref-row.c',
  'finance-pref-row-check.c',
  'finance-pref-row-spin.c',
  'finance-pref-row-switch.c',
  'finance-pref-window.c',
)

built_sources += gnome.compile_resources(
  'pref-resources',
  'pref.gresource.xml',
  c_name: 'pref',
)
